fix:fixed modal on mobile

--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -71,13 +71,15 @@
   .popup__title {
     font-size: 18px;
     line-height: 21.78px;
-    margin: 0 0 75px 0;
+    margin: 0;
   }
 
   .popup__container {
     position: relative;
-    padding: 25px 22px;
     margin: 0 auto;
+    max-width: 282px;
+    min-height: 322px;
+    padding: 25px 22px;
   }
 
   .popup__close {
