--- a/blocks/popup_form.css
+++ b/blocks/popup_form.css
@@ -83,6 +83,13 @@ input[name="url"]::placeholder {
     font-size: 14px;
     line-height: 16.94px;
   }
+
+  .popup__form {
+    max-width: 238px;
+    min-height: 27px;
+    padding: 75px 0 0;
+    margin: 0;
+  }
 }
 
 .popup__input_type_error {
